--- a/static/Home_style.css
+++ b/static/Home_style.css
@@ -32,7 +32,7 @@ body::-webkit-scrollbar-thumb{
     justify-content: space-between;
 }
 
-.nav-home-button, .nav-recordsale-button, .nav-customers-button, .nav-inventory-button, .nav-suppliers-button, .nav-employees-button, .nav-settings-button, .nav-support-button, .nav-logout-button{
+.nav-home-button, .nav-recordsale-button, .nav-customers-button, .nav-inventory-button, .nav-suppliers-button, .nav-employees-button, .nav-settings-button, .nav-logout-button{
 	color: #ECF0F1;
 	height: 2.9em;
 	width: 5.2em;
@@ -49,7 +49,7 @@ body::-webkit-scrollbar-thumb{
 	color: #1A1A1A;
 }
 
-.nav-inventory-button:hover, .nav-recordsale-button:hover, .nav-customers-button:hover, .nav-suppliers-button:hover, .nav-employees-button:hover, .nav-settings-button:hover, .nav-support-button:hover, .nav-logout-button:hover{
+.nav-inventory-button:hover, .nav-recordsale-button:hover, .nav-customers-button:hover, .nav-suppliers-button:hover, .nav-employees-button:hover, .nav-settings-button:hover, .nav-logout-button:hover{
 	background-color: #EEEEEE;
 	color: #1A1A1A;
 }
