--- a/static/Settings_style.css
+++ b/static/Settings_style.css
@@ -1,8 +1,6 @@
 body{
 	background-color: #EEEEEE;
 	margin: 0;
-	overflow-x: hidden;
-	overflow-y: hidden;
 }
 
 .header-container{
@@ -23,7 +21,7 @@ body{
     justify-content: space-between;
 }
 
-.nav-home-button, .nav-recordsale-button, .nav-customers-button, .nav-inventory-button, .nav-suppliers-button, .nav-employees-button, .nav-settings-button, .nav-support-button, .nav-logout-button{
+.nav-home-button, .nav-recordsale-button, .nav-customers-button, .nav-inventory-button, .nav-suppliers-button, .nav-employees-button, .nav-settings-button, .nav-logout-button{
 	color: #ECF0F1;
 	height: 2.9em;
 	width: 5.2em;
@@ -40,7 +38,7 @@ body{
 	color: #1A1A1A;
 }
 
-.nav-home-button:hover, .nav-recordsale-button:hover, .nav-customers-button:hover, .nav-inventory-button:hover, .nav-employees-button:hover, .nav-suppliers-button:hover, .nav-support-button:hover, .nav-logout-button:hover{
+.nav-home-button:hover, .nav-recordsale-button:hover, .nav-customers-button:hover, .nav-inventory-button:hover, .nav-employees-button:hover, .nav-suppliers-button:hover, .nav-logout-button:hover{
 	background-color: #EEEEEE;
 	color: #1A1A1A;
 }
@@ -103,55 +101,20 @@ body{
 	margin-left: 5.5em;
 }
 
-.useraccounts-container{
-	background-color: transparent;
-	color: #1A1A1A;
-	height: 10em;
-	width: 18em;
-	padding: 1.5em;
-	font-size: 1.2em;
-	font-family: verdana;
-	margin-top: 3em;
-	margin-left: 4em;
-	display: grid;
-	grid-template-columns: 50% 50%;
-}
-
-.existingaccounts-container{
-	height: 19em;
-	width: 18em;
-	overflow-y: scroll;
-}
-
-.existingaccounts-container::-webkit-scrollbar{
-	background-color: transparent;
-	width: 0.5em;
-}
-
-.existingaccounts-container::-webkit-scrollbar-thumb{
-	background-color: #1A1A1A;
-	border-radius: 2em;
-}
-
-.existingaccounts-info-container{
-	display: grid;
-	grid-template-columns: 40% 60%;
-}
-
-.changeclosingtime-container, .refundvalidlimit-container, .salestax-container, .clearholdingtokens-container, .cleardatabases-container, .clearreceipts-container, .clearfinancialsummaries-container, .shopaddress-container, .shopcontact-container, .shopname-container, .clientid-container, .hostdeivceinfo-container{
+.changeclosingtime-container, .refundvalidlimit-container, .salestax-container, .clearholdingtokens-container, .cleardatabases-container, .clearreceipts-container, .clearfinancialsummaries-container, .shopaddress-container, .shopcontact-container{
 	margin-top: 0.9em;
 }
 
-.closingtime-label, .refundvalidlimit-label, .salestax-label, .clearholdingtokens-label, .cleardatabases-label, .clearreceipts-label, .clearfinancialsummaries-label, .username-label, .userpassword-label, .addnewaccount-label, .existingaccounts-label, .shopaddress-label, .shopcontact-label, .shopname-label, .clientid-label, .hostdeviceinfo-label{
+.closingtime-label, .refundvalidlimit-label, .salestax-label, .clearholdingtokens-label, .cleardatabases-label, .clearreceipts-label, .clearfinancialsummaries-label, .shopaddress-label, .shopcontact-label{
 	font-size: 0.85em;
 	font-family: "Verdana", monospace;
 }
 
-.clearholdingtokens-label, .cleardatabases-label, .clearreceipts-label, .clearfinancialsummaries-label, .addnewaccount-label, .existingaccounts-label{
+.clearholdingtokens-label, .cleardatabases-label, .clearreceipts-label, .clearfinancialsummaries-label{
 	font-size: 1em;
 }
 
-.closingtime-dropdown, .refundvalidlimit-textbox, .salestax-textbox, .username-textbox, .userpassword-textbox, .existingusername-textbox, .existingpassword-textbox, .shopname-textbox{
+.closingtime-dropdown, .refundvalidlimit-textbox, .salestax-textbox{
 	background-color: transparent;
 	color: #1A1A1A;
 	width: 6em;
@@ -159,19 +122,6 @@ body{
 	font-family: "Verdana", monospace;
 	border: none;
 	border-bottom: 0.15em solid #1A1A1A;
-}
-
-.username-textbox, .userpassword-textbox{
-	width: 6em;
-}
-
-.clientid-value, .hostdeviceinfo-value{
-	font-size: 0.95em;
-	font-size: "Verdana", monospace;
-}
-
-.shopname-textbox{
-	width: 20em;
 }
 
 .salestax-percentage-label{
