--- a/templates/Login.html
+++ b/templates/Login.html
@@ -20,6 +20,8 @@
 					<form method = "POST">
 						<p class = "username-entry-label">username</p>
 						<input type = "text" name = "usernameentry" class = "username-entry-textbox" autocomplete = "off"/>
+						<p class = "password-entry-label">password</p>
+						<input type = "text" name = "passwordentry" class = "password-entry-textbox" autocomplete = "off"/>
 						<button type = "submit" value = "login" class = "login-button" title = "login">
 							<i class = "fas fa-sign-in-alt"></i>
 						</button>
