--- a/templates/Customers.html
+++ b/templates/Customers.html
@@ -94,7 +94,7 @@
                         <div class = "searchresult">
                             <div class = "customermodify-id-container">
                                 <span class = "customermodify-id-label">id :</span>
-                                <span type = "text" class = "customersmodify-id" id = "customermodify-id-{{ i[0] }}">{{ i[0] }}</span>
+                                <span type = "text" class = "customermodify-id" id = "customermodify-id-{{ i[0] }}">{{ i[0] }}</span>
                             </div>
                             <div class = "customermodify-name-container">
                                 <span class = "customermodify-name-label">name : </span>
