--- a/templates/Settings.html
+++ b/templates/Settings.html
@@ -80,7 +80,7 @@
 		            	</button>
 		            </div>
 		        	<div class = "cleardatabases-container">
-	            		<span class = "cleardatabases-label">Clear databases</span>
+	            		<span class = "cleardatabases-label">Clear tables</span>
 	            		<button type = "submit" value = "cleardatabases" class = "delete-button" name = "button">
 		                	<i class = "fas fa-trash-alt"></i>
 		            	</button>
