--- a/templates/Suppliers.html
+++ b/templates/Suppliers.html
@@ -93,7 +93,7 @@
                         <div class = "searchresult">
                             <div class = "suppliermodify-id-container">
                                 <span class = "suppliermodify-id-label">id :</span>
-                                <span type = "text" class = "suppliersmodify-id" id = "suppliermodify-id-{{ i[0] }}">{{ i[0] }}</span>
+                                <span type = "text" class = "suppliermodify-id" id = "suppliermodify-id-{{ i[0] }}">{{ i[0] }}</span>
                             </div>
                             <div class = "suppliermodify-name-container">
                                 <span class = "suppliermodify-name-label">name : </span>
